# mlops-simple-project

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docker/: clearml_agent.conf  docker-compose.yaml
docker/clearml_config/: apiserver.conf
scripts/: local_infer.py  prepare_data.py  register_model.py  train.py  upload_dataset.py
serving/: preprocessing.py
src/: common.py
ui/: app.py
