[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops-simple-project"
version = "0.1.0"
description = "ITMO MLOps: RuSentiTweet sentiment classification with ClearML"
requires-python = ">=3.11"
dependencies = [
    "clearml>=1.16",
    "clearml-serving>=1.3",
    "datasets>=3.0",
    "joblib>=1.4",
    "pandas>=2.2",
    "requests>=2.32",
    "scikit-learn>=1.5",
    "streamlit>=1.40",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
